--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+branca==0.3.1
 certifi==2019.9.11
 chardet==3.0.4
+folium==0.10.0
 idna==2.8
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+numpy==1.17.3
 requests==2.22.0
+six==1.13.0
 urllib3==1.25.6
