--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ idna==2.8
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 numpy==1.17.3
+pandas==0.25.3
+python-dateutil==2.8.1
+pytz==2019.3
 requests==2.22.0
 six==1.13.0
 urllib3==1.25.6
